# adafruit-macropad-control-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROFILE_LAYOUTS.md  README.md  Start-MacroPad-Configurator.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.sh
.github/workflows/: tests.yml
config/: active-profile-map.json
desktop/macropad_configurator/: __init__.py  app.py  device_io.py  live_controls.py  main_window.py  models.py  profile_switcher.py  widgets.py
device/: __init__.py  code.py  device_config.json  macropad_core.py
device/profiles/: audio-controls.json  blender.json  caja.json  chatgpt.json  comfyui.json  discord.json  editing.json  firefox.json  freecad.json  i3wm.json  index.json  instagram.json  krita.json  libreoffice.json  live-controls.json  lm-studio.json  media.json  nitter.json  options.json  prime-video.json  printables.json  quicklaunch.json  reddit.json  ssh.json  system-control.json  terminal-manjaro.json  thingiverse.json  vlc.json  vscode.json  youtube.json
docs/: CONFIGURATOR_GUI.md
tests/: conftest.py  test_builtin_profiles.py  test_device_io.py  test_firmware_core.py  test_gui.py  test_install_profile_switcher.py  test_live_controls.py  test_models.py  test_profile_switcher.py
tools/: build_builtin_subprofiles.py  deploy_device.py  device_smoke.py  encoder_timing_capture.py  generate_configurator_tutorial.py  install_profile_switcher.py  sync_all_devices.py
