[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "adafruit-macropad-configurator"
version = "1.1.0"
description = "Qt profile editor and standalone CircuitPython firmware for the Adafruit MacroPad RP2040"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8",
  "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-qt>=4.4",
]

[project.scripts]
macropad-configurator = "macropad_configurator.app:main"

[tool.setuptools]
package-dir = {"" = "desktop"}

[tool.setuptools.packages.find]
where = ["desktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
